--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-spring/native": "^9.6.1",
+    "@react-three/drei": "^9.46.1",
+    "@react-three/fiber": "^8.9.1",
+    "@react-three/xr": "^5.1.0",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "@use-gesture/react": "^10.2.22",
     "expo": "~47.0.8",
+    "expo-gl": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "three": "^0.147.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.2.4"
   },
   "private": true
 }
