--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
   },
   "dependencies": {
     "@react-spring/native": "^9.6.1",
-    "@react-three/drei": "^9.46.1",
-    "@react-three/fiber": "^8.9.1",
-    "@react-three/xr": "^5.1.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "@use-gesture/react": "^10.2.22",
-    "expo": "~47.0.8",
+    "expo": "^47.0.13",
     "expo-gl": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
